# FreeTradingJournal

./: .gitignore  CLAUDE.md  README.md  TIPS.MD  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: dashboard-redesign-research.md  data-model.md  feature-requests.md  functional-spec.md  metrics-and-calculations.md  prd.md  technical-design.md
src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_executions_options.sql  003_trade_screenshot_url.sql  004_market_candles.sql  005_settings.sql
src-tauri/src/: lib.rs  main.rs  test_utils.rs
src-tauri/src/calculations/: aggregations.rs  mod.rs  pnl.rs
src-tauri/src/commands/: accounts.rs  accounts_test.rs  import.rs  market_data.rs  metrics.rs  metrics_test.rs  mod.rs  settings.rs  trades.rs  trades_test.rs
src-tauri/src/models/: account.rs  instrument.rs  metrics.rs  mod.rs  trade.rs  user.rs
src-tauri/src/parsers/: mod.rs  tlg_parser.rs
src-tauri/src/repository/: account_repo.rs  instrument_repo.rs  mod.rs  trade_repo.rs
src-tauri/src/services/: import_service.rs  market_data_service.rs  metrics_service.rs  mod.rs  settings_service.rs  trade_service.rs
src/api/: accounts.test.ts  accounts.ts  import.ts  index.ts  market.ts  metrics.test.ts  metrics.ts  settings.ts  trades.test.ts  trades.ts
src/mocks/: calculations.test.ts  calculations.ts  index.ts  invoke.ts  mockData.ts  mockInvoke.test.ts  mockInvoke.ts
src/stores/: accountsStore.test.ts  accountsStore.ts  importStore.ts  (+9 more)
(+57 files in other folders)
